fixed footer alignment

--- a/_assets/scss/landing-page/bootstrap.scss
+++ b/_assets/scss/landing-page/bootstrap.scss
@@ -56,3 +56,7 @@
 .row {
   padding: 60px 0px;
 }
+
+footer .container {
+  display: flex;
+}
